--- a/Statics/style.css
+++ b/Statics/style.css
@@ -22,6 +22,10 @@ body {
   margin-top: 50px;
 }
 
+#token::placeholder {
+  color: white;
+}
+
 .button {
   background-color: rgba(0, 200, 200, 0.7);
   border-radius: 8px;
