Add time tracking

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -23,6 +23,7 @@
       <p class="info" id="info1"></p>
       <p class="info" id="info2"></p>
       <p class="info" id="info3"></p>
+      <p class="info" id="info4"></p>
     </div>
 
   </center>
